# installer

./: .gitignore  Cargo.toml  LICENSE.md  README.md  base-release-text.md  build.rs  rust-toolchain.toml  rustfmt.toml  transifex.yaml
.github/: dependabot.yml
.github/workflows/: build.yml  on-release-published.yml  pull-app-translations.yml  push-app-source-language-file.yml  push-app-source-language.yml  release-check.yml  release.yml  update-app-source-language-file.yml
.tx/: config
locale/: be.json  cs.json  de.json  en-US.json  en.json  eo.json  es.json  fr.json  it.json  pl.json  pt_BR.json  ru-RU.json  ru.json  tr.json  uk.json  vi.json  zh.json
locale/ru_RU/: application.json
scripts/: extract_locale_strings.py
src/: app.rs  constants.rs  df_binary.rs  dict_metadata.rs  fetch.rs  hook_metadata.rs  localization.rs  logic.rs  main.rs  persistent.rs  state.rs  thread_pool.rs  utils.rs
