[package]
name = "dfint-installer"
version = "0.4.5"
edition = "2021"
build = "build.rs"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
anyhow = "1.0.95"
async-std = "1.13.0"
checksum = "0.2.1"
chrono = "0.4.39"
crc32fast = "1.4.2"
eframe = "0.29.1"
egui-modal = "0.6.0"
egui-notify = "0.18.0"
egui_extras = { version = "0.30.0", features = ["all_loaders"] }
egui_file = "0.21.1"
env_logger = "0.11.6"
exe = "0.5.6"
futures = "0.3.31"
include_dir = "0.7.4"
serde = "1.0.217"
serde_derive = "1.0.202"
serde_json = "1.0.134"
static_init = "1.0.3"
sys-locale = "0.3.2"
sysinfo = "0.30.12"
ureq = { version = "2.10.1", features = ["json"] }
