[package]
name = "dfint-installer"
version = "0.6.3"
edition = "2024"
build = "build.rs"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
anyhow = "1.0.100"
async-std = "1.13.2"
checksum = "0.2.1"
chrono = "0.4.43"
crc32fast = "1.5.0"
eframe = "0.30.0"
egui-modal = "0.6.0"
egui-notify = "0.18.0"
egui_extras = { version = "0.30.0", features = ["all_loaders"] }
egui_file = "0.21.1"
env_logger = "0.11.8"
exe = "0.5.6"
futures = "0.3.31"
include_dir = "0.7.4"
regex = "1.12.2"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
static_init = "1.0.4"
sys-locale = "0.3.2"
sysinfo = "0.37.2"
ureq = { version = "3.1.4", features = ["json"] }
